--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>JONELL COLON :: Project 2 :: SDI 1203</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1203: JONELL COLON</h1>
     <h2>Project 2</h2>
 </header>
 <article>
@@ -15,8 +15,8 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>COMPLETION DATE, JONELL COLON</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="colon_jonell_assignment2.js"></script>
 </body>
 </html>
