--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -15,7 +15,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, JONELL COLON</p>
+    <p>03-08-12, JONELL COLON</p>
 </footer>
 <script type="text/javascript" src="colon_jonell_assignment2.js"></script>
 </body>
